ndb - bug#59496 - check ALLOC-bit instead of op == ZINSERT